# nonogram

./: .gitignore  Makefile  README.md  pyproject.toml
nonogram/: __main__.py  cli.py  exceptions.py  services.py
